# arig-wksp

./: .gitignore  .projects.gws  README.md  build.xml  checkWorkspaces.sh  functions.sh  reinstallHooks.sh  updateWorkspaces.sh
ansible/: .projects.gws
cpp/: .projects.gws  configure
cpp-linux/: .projects.gws
cpp-micro/: .projects.gws  CMakeLists.txt  download.sh
dockers/: .projects.gws
electronique/: .projects.gws
git/: clone-all.sh  fetch-all.sh  functions.sh
java/: .projects.gws
javascript/: .projects.gws  run.sh
js/: .projects.gws
mecanique/: .projects.gws
vagrant/: .projects.gws
yocto/: .projects.gws
